<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroiDuino</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_show_password">Show password</string>
    <string name="label_login">Login</string>
    <string name="label_kamar_utama_1">Kamar Utama 1</string>
    <string name="label_kamar_utama_2">Kamar Utama 2</string>
    <string name="label_ruang_tamu">Ruang Tamu</string>
    <string name="label_halaman">Halaman</string>
    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="label_connect">Connect to Arduino</string>
    <string name="label_disconnect">Disconnect from Arduino</string>
    <string name="label_ipaddress">IP Address:</string>
    <string name="label_save">Save</string>
    <string name="status_connected">Successfully connected to Arduino</string>
    <string name="status_disconnected">Disconnected from Arduino</string>
    <string name="no_connection_title">No Internet Connection</string>
    <string name="no_connection_message">You do not have internet connection.</string>
    <string name="lamp_on_off">Lamp On Off</string>
    
    <color name="text_color_green">#00FF00</color>
    <color name="text_color_red">#FF0000</color>

</resources>
